--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -9,10 +9,26 @@ hr {
     max-width: 1300px;
 }
 
+.container-principal {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-proyect {
+    width: 100%;
+    max-width: 1100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- NAVBAR ------------------------------------------------------------------------------ */
 .navbar-proyect {
     justify-content: center !important;
+    background-color: var(--bs-gray-400) !important;
+    margin-bottom: 1rem;
 }
 
 .container-navbar-elements {
@@ -71,10 +87,42 @@ hr {
 }
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------- DEFAULT ----------------------------------------------------------------------------- */
+.jumbotron-proyect {
+    width: 100%;
+    padding: 30px;
+    margin: 20px 0;
+    background-color: var(--bs-gray-200) !important;
+}
+
+.container-title {
+    display: flex;
+    justify-content: center;
+}
+
+.arrow-container {
+    align-items: normal !important;
+}
+
+.container-some-products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card-proyect {
+    padding: 10px;
+    margin: 20px;
+    width: 18rem;
+}
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------ */
 .footer-proyect {
     justify-content: center !important;
+    background-color: var(--bs-gray-400) !important;
 }
+
 .container-footer-elements {
     width: 100%;
     max-width: 1200px;
