--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -2,6 +2,7 @@
 /* ------------------------------------------------------------------- ALL DOCUMENT ------------------------------------------------------------------------ */
 * {
    box-sizing: border-box;
+   scroll-behavior: smooth;
 }
 
 hr {
@@ -98,6 +99,30 @@ hr {
 .container-title {
     display: flex;
     justify-content: center;
+    margin: 1rem 0;
+}
+
+.jumbotron-products-proyect {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1100px;
+    height: 200px;
+    background-color: var(--bs-blue)
+}
+
+.jumbotron-products-icon {
+    margin: 10px 20px;
+    font-size: 90px;
+    color: white;
+    width: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-tv {
+    padding-top: 5px;
 }
 
 .arrow-container {
@@ -108,6 +133,7 @@ hr {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 1rem 0;
 }
 
 .card-proyect {
