--- a/CatalogoProductos-Web/Site.Master
+++ b/CatalogoProductos-Web/Site.Master
@@ -17,7 +17,7 @@
 <body>
     <form id="form1" runat="server">
 
-        <nav class="navbar navbar-proyect">
+        <nav class="navbar navbar-proyect shadow-sm">
 
             <div class="container-navbar-elements">
                 <div class="container-navbar-logo">
@@ -60,7 +60,7 @@
             </asp:ContentPlaceHolder>
         </div>
 
-        <footer class="navbar footer-proyect">
+        <footer class="navbar footer-proyect shadow-proyect">
 
             <hr />
 
