--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -280,8 +280,64 @@ hr {
 /* ------------------------------------------------------------------- DETALLE PRODUCTO -------------------------------------------------------------------- */
 .product-detail-div {
     border: 1px solid var(--bs-border-color-translucent);
-    border-radius: 0.375rem;
-    height: fit-content;
+    /*border-radius: 0.375rem;*/
+    margin: 1.5rem 0;
+}
+
+.badge-detail-proyect {
+    height: 35px;
+    color: white !important;
+    border-top-right-radius: .5rem;
+    border-top-left-radius: .5rem;
+    background-color: var(--bs-link-hover-color);
+    padding: 0 .6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding-left: 1.2rem;
+}
+
+.img-info-container {
+    display: flex;
+}
+
+.img-detail-container {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+
+.info-detail-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+    background: var(--bs-gray-100);
+    padding-bottom: 5px;
+    border-bottom-right-radius: .375rem
+}
+
+.background-h4-details {
+    background: var(--bs-gray-400);
+    padding-left: 5px;
+    margin-bottom: 0 !important;
+}
+
+.label-detail-proyect {
+    margin: 0;
+    padding-left: 7px;
+    font-weight: 500;
+    font-size: 1.2rem;
+    background: var(--bs-gray-100);
+    color: var(--bs-gray-700);
+}
+
+.container-title-others {
+    display: flex;
+    justify-content: start;
+    margin-top: 1rem;
 }
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
