--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -1,12 +1,12 @@
 ﻿/* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- ALL DOCUMENT ------------------------------------------------------------------------ */
 * {
-   box-sizing: border-box;
-   scroll-behavior: smooth;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 .body {
-   background: #eee;
+    background: #eee;
 }
 
 hr {
@@ -67,7 +67,7 @@ hr {
     justify-content: end;
 }
 
-.login-proyect, .register-proyect{
+.login-proyect, .register-proyect {
     margin: 0 2.5px;
 }
 
@@ -154,10 +154,10 @@ hr {
     transition: transform .2s;
 }
 
-.card-proyect:hover {
-    transform: scale(1.02);
-    box-shadow: .30rem .6rem 1rem rgba(0, 0, 0, .075);
-}
+    .card-proyect:hover {
+        transform: scale(1.02);
+        box-shadow: .30rem .6rem 1rem rgba(0, 0, 0, .075);
+    }
 
 .img-card-proyect {
     width: 100px;
@@ -192,8 +192,6 @@ hr {
 
 .link-button-product {
     text-decoration: none;
-    /* TODO: Solo para ver el cambio */
-    /* color: inherit;*/
 }
 
 .one-product-container {
@@ -205,10 +203,10 @@ hr {
     transition: transform 0.2s;
 }
 
-.one-product-container:hover {
-    transform: scale(1.01);
-    box-shadow: .30rem .6rem 1rem rgba(0, 0, 0, .075);
-}
+    .one-product-container:hover {
+        transform: scale(1.01);
+        box-shadow: .30rem .6rem 1rem rgba(0, 0, 0, .075);
+    }
 
 .image-product-container {
     width: 150px;
@@ -255,10 +253,10 @@ hr {
     transition: .2s;
 }
 
-.fav-icon-product:hover {
-   color: var(--bs-pink);
-   font-size: 25px;
-}
+    .fav-icon-product:hover {
+        color: var(--bs-pink);
+        font-size: 25px;
+    }
 
 .hr-product-proyect {
     margin: .5rem 0;
@@ -280,7 +278,6 @@ hr {
 /* ------------------------------------------------------------------- DETALLE PRODUCTO -------------------------------------------------------------------- */
 .product-detail-div {
     border: 1px solid var(--bs-border-color-translucent);
-    /*border-radius: 0.375rem;*/
     margin: 1.5rem 0;
 }
 
@@ -338,6 +335,98 @@ hr {
     display: flex;
     justify-content: start;
     margin-top: 1rem;
+}
+
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------- LOGIN ------------------------------------------------------------------------------- */
+.login-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 700px;
+}
+
+.login-elements {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.title-login {
+    background: aliceblue;
+    border: 3px solid aliceblue;
+    border-radius: 0.365rem;
+    padding: 5px 0;
+    margin: 0;
+    color: var(--bs-gray-700);
+}
+
+.btn-login {
+    font-size: 1.3rem !important;
+}
+
+.validator {
+    width: 100%;
+    margin-top: .25rem;
+    font-size: .875em;
+    color: var(--bs-form-invalid-color);
+}
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------- REGISTRO ---------------------------------------------------------------------------- */
+.register-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.register-elements {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.title-register {
+    background: var(--bs-success);
+    border: 3px solid aliceblue;
+    border-radius: 0.365rem;
+    padding: 5px 0;
+    margin: 0;
+    color: var(--bs-gray-100);
+}
+
+.fieldset-register {
+    padding: 1rem;
+    margin-bottom: 1rem;
+}
+
+.legend-form {
+    float: unset !important;
+    width: auto !important;
+    padding: 0 !important;
+    margin-bottom: 0 !important;
+    font-size: calc(1.275rem + .3vw);
+    line-height: inherit;
+}
+
+.legend-title {
+    padding: 2px 10px;
+    border: 1px solid var(--bs-dark-bg-subtle);
+    border-radius: 1.4rem;
+    font-size: large;
+    font-weight: 500;
+    background-color: var(--bs-gray-200);
+}
+
+.btn-register {
+    font-size: 1.3rem !important;
 }
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
