--- a/CatalogoProductos-Web/Site.Master
+++ b/CatalogoProductos-Web/Site.Master
@@ -77,8 +77,9 @@
                         <i class="bi bi-funnel-fill"></i>
                         Filtros:
                     </label>
-                    <asp:DropDownList CssClass="form-select form-select-sm mx-1" runat="server" ></asp:DropDownList>
-                    <asp:DropDownList CssClass="form-select form-select-sm mx-1" runat="server" ></asp:DropDownList>
+                    <asp:DropDownList ID="CampoFiltroDropDownList" CssClass="form-select form-select-sm mx-1" runat="server" ></asp:DropDownList>
+                    <asp:DropDownList ID="CondicionDropDownList" CssClass="form-select form-select-sm mx-1" runat="server" ></asp:DropDownList>
+                    <asp:TextBox ID="ValorFiltroTextBox" CssClass="form-control" runat="server" ></asp:TextBox>
                     <label class="form-label label-filter-proyect">
                         <i class="bi bi-arrow-down-up"></i>
                         Ordenar por:
