--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -99,6 +99,11 @@ hr {
     justify-content: space-between;
 }
 
+.container-filters-elements-active {
+    width: 100%;
+    max-width: 1200px;
+}
+
 .div-filter {
     display: flex;
     align-items: baseline;
@@ -296,6 +301,75 @@ hr {
     font-weight: 500;
     font-size: 1.032rem;
     color: var(--bs-gray-600);
+}
+
+.span-checkbox-container input {
+    border-radius: .25em;
+    float: left;
+    margin-left: -1.5em;
+    --bs-form-check-bg: var(--bs-body-bg);
+    flex-shrink: 0;
+    width: 1em;
+    height: 1em;
+    margin-top: .25em;
+    vertical-align: top;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--bs-form-check-bg);
+    background-image: var(--bs-form-check-bg-image);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
+    print-color-adjust: exact;
+}
+
+.span-checkbox-container input:focus, .span-checkboxlist-container input:focus {
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 .25rem rgba(13, 110, 253, .25);
+}
+
+.span-checkbox-container input:checked[type=checkbox], .span-checkboxlist-container input:checked[type=checkbox] {
+    --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
+}
+
+.span-checkbox-container input:checked, .span-checkboxlist-container input:checked {
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+}
+
+.span-checkboxlist-container input {
+    border-radius: .25em;
+    --bs-form-check-bg: var(--bs-body-bg);
+    flex-shrink: 0;
+    width: 1em;
+    height: 1em;
+    margin-top: .25em;
+    margin-left: 5px;
+    margin-right: 5px;
+    vertical-align: top;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--bs-form-check-bg);
+    background-image: var(--bs-form-check-bg-image);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    -webkit-print-color-adjust: exact;
+    color-adjust: exact;
+    print-color-adjust: exact;
+}
+
+.span-checkboxlist-container {
+    overflow-x: auto;
+    text-wrap: nowrap;
+    max-width: 1100px;
 }
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
