--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -109,6 +109,11 @@ hr {
     align-items: baseline;
 }
 
+.div-search-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .label-filter-proyect {
     display: inline-flex !important;
     text-wrap: nowrap;
@@ -117,8 +122,13 @@ hr {
     margin-right: 5px;
 }
 
+.field-validator-div {
+    display: flex;
+    flex-direction: column;
+}
+
 .form-check-proyect {
-    margin-right: 5px;
+    display: flex !important;
 }
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
@@ -213,6 +223,17 @@ hr {
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- PRODUCTOS --------------------------------------------------------------------------- */
+#UpdatePanelProductos {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#UpdatePanelProductos hr {
+    width: 1300px;
+}
+
 .products-container {
     margin: 1.5rem 0;
     width: 1100px;
@@ -307,6 +328,11 @@ hr {
     font-size: 1.032rem;
     color: var(--bs-gray-600);
     margin-bottom: .5rem !important;
+}
+
+.span-checkbox-container {
+    float: right;
+    padding-left: 1.5rem;
 }
 
 .span-checkbox-container input {
