--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -467,6 +467,24 @@ hr {
     margin-top: 1rem;
 }
 
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------- LISTADO DE PRODUCTOS ---------------------------------------------------------------- */
+.has-icon a {
+    font-family: bootstrap-icons !important;
+    border: 1px solid #ffc107;
+    border-radius: .375rem;
+    text-decoration: none;
+    padding: 5px;
+    color: #000;
+    background-color: #ffc107;
+    font-size: 1.2rem;
+    transition: .2s;
+}
+
+.has-icon a:hover {
+    background-color: #ffe30c;
+    border-color: #ffe30c;
+}
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- LOGIN ------------------------------------------------------------------------------- */
